fix border behind iphone

--- a/components/layout/stylesheets/iphone.styl
+++ b/components/layout/stylesheets/iphone.styl
@@ -20,6 +20,15 @@
     left: 0px
     z-index: 100
 
+  .black-background
+    width: 87%
+    height: 79%
+    position: absolute
+    top: 10%
+    left: 8%
+    z-index: 5
+    background: #000
+
   .iphone-content
     top: 0px
     left: 0px
